# ads-api

./: Cargo.toml  README.md
src/: controller.rs  error.rs  main.rs  model.rs  route.rs
src/controller/: get_country.rs
src/model/: ads.rs  queries.rs
src/route/: ads.rs  click_ads.rs
tests/: integration_tests.rs
