[package]
name = "ads-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "migrate", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
derive_more = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
env_logger = "0.8"
log = "0.4"
nanoid = "0.4.0"

[dev-dependencies]
serde_urlencoded = "0.7"
